Fixed bugs
- Fixed past games button showing
- Fixed not showing up who won
- Fixed player switching when resetting game

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -63,6 +63,10 @@ h1 {
   }
 }
 
+.score {
+  display: none;
+}
+
 .useroptions {
   display: none;
   // display: flex;
